<resources>
    <string name="app_name">NigeriaMRS</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_location">Location</string>
    <string name="dbname">openmrs.db</string>
    <string name="aadbname">aaopenmrs.db</string>
    <string name="app_version">App Version: 26.1.1</string>
    <string name="alphanumeric_postal_code">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789 </string>
    <string name="alert_title">No Network Connection</string>
    <string name="alert_message">You don\'t have an active network connection on this device. Ensure you are connected to an active network that is on the same subnet as the NMRS server you wish to connect to and try launching the app again</string>
    <string name="login_button">Login</string>
    <string name="login_url_hint">URL address </string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_location_select">Session Location</string>
    <string name="login_required">Required</string>
    <string name="req_star"><![CDATA[<font color=\'#cc0029\'> * </font>]]></string>
    <string name="warning_dialog_title">Warning</string>
    <string name="warning_lost_data_dialog">Changing the URL, username or password will erase all the data. Are you sure?</string>
    <string name="forgot_dialog_title">Unable to login? </string>
    <string name="forgot_dialog_message">Please contact the system administrator</string>
    <string name="forgot_button_ok">Dismiss</string>
    <string name="login_offline">Offline</string>
    <string name="login_online">Online</string>
    <string name="reg_client_code_hint">HTS Client Code</string>
    <string name="reg_anc_hint">ANC Number</string>
    <string name="reg_art_hint">ART Number</string>
    <string name="reg_hei_hint">Exposed Infant ID</string>
    <string name="reg_openmrs_hint">Openmrs Code</string>
    <string name="emptyerror">Required</string>
    <string name="fname_empty_error">Given name required</string>
    <string name="fmname_invalid_error">Given and middle name cannot contain symbols or numbers</string>
    <string name="fname_invalid_error">Given name cannot contain symbols or numbers</string>
    <string name="midname_invalid_error">Middle name cannot contain symbols or numbers</string>
    <string name="lname_invalid_error">Family name cannot contain symbols or numbers</string>
    <string name="dob_error">Date should be between %1$s and %2$s</string>
    <string name="reg_firstname_hint">Given Name</string>
    <string name="reg_uniqueid_hint">Patient’s Hospital Number</string>
    <string name="reg_midname_hint">Middle Name</string>
    <string name="reg_phone_hint">Phone Number</string>
    <string name="reg_surname_hint">Family Name</string>
    <string name="reg_ques_name"> <font color = "#ff0000">*</font> These fields are required</string>
    <string name="reg_ident_name">What\'s the patient\'s hospital number?</string>
    <string name="reg_phone_number">Phone Number?</string>
    <string name="reg_ids_name">Other IDs?</string>
    <string name="reg_ques_gender">What\'s the patient\'s sex?</string>
    <string name="reg_ques_dob">What\'s the patient\'s birth date?</string>
    <string name="consumption_date">Consumption Date</string>
    <string name="operation_date">Operation Date</string>
    <string name="department">Department</string>
    <string name="destination">Destination</string>
    <string name="source">Source</string>
    <string name="institution">Institution</string>
    <string name="item">Item</string>
    <string name="itemPharmacy">Item Pharmacy</string>
    <string name="drugType">Drug Type</string>
    <string name="instance_type">Instance Type</string>
    <string name="item_batch">Item Batch</string>
    <string name="status">Status</string>
    <string name="quantity">Quantity</string>
    <string name="operationNumber">Operation Number</string>
    <string name="losses">Losses</string>
    <string name="test_purpose">Test purpose</string>
    <string name="commodity_source">Commodity Source</string>
    <string name="data_system">Data system</string>
    <string name="commodity_type">Commodity Type</string>
    <string name="add_more">Add More</string>
    <string name="download_report">Download Report</string>
    <string name="label_or">Or</string>
    <string name="reg_ques_address">Address</string>
    <string name="addr1_hint">Address <font color = "#ff0000"><b>*</b></font></string>
    <string name="addr2_hint">Address 2</string>
    <string name="addr_invalid_error">Address cannot contain invalid characters</string>
    <string name="atleastone">Fill at least one address field</string>
    <string name="consumption_is_required">Consumption date is required</string>
    <string name="department_is_required">Department is required</string>
    <string name="item_is_required">Item is required</string>
    <string name="incorrect_country">Country name incorrect</string>
    <string name="req_state">State name required</string>
    <string name="req_country">Country name required</string>
    <string name="req_city">City name required</string>
    <string name="req_postal">Postal code required</string>
    <string name="receiptItem">Receipt Item</string>
    <string name="receiptQuantity">Receipt Quantity</string>
    <string name="receiptItemBatch">Receipt Item Batch</string>
    <string name="expirationDate">Expiration Date</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="dob_hint">Date of Birth (dd/MM/yyyy)</string>
    <string name="consumption_date_hint">Consumption date (dd/MM/yyyy)</string>
    <string name="operation_date_hint">Operation date (dd/MM/yyyy)</string>
    <string name="receipt_expiration_date_hint">Receipt Expiration date (dd/MM/yyyy)</string>
    <string name="distribution_expiration_date_hint">Distribution Expiration date (dd/MM/yyyy)</string>
    <string name="transfer_expiration_date_hint">Transfer Expiration date (dd/MM/yyyy)</string>
    <string name="adjustment_expiration_date_hint">Adjustment Expiration date (dd/MM/yyyy)</string>
    <string name="estyr">Estimated Years</string>
    <string name="estmonth">Estimated Months</string>
    <string name="capture_photo">Capture photo</string>
    <string name="offline_mode_unsupported_in_first_login">Offline mode is not supported during first login.Enable online mode and then try again.</string>
    <string name="login_offline_toast_message">You are now in offline mode.</string>
    <string name="conn_timeout_dialog_title">Connection Failed</string>
    <string name="conn_timeout_dialog_message">A network error has occurred - Connection Timeout.\nPlease try again in a few seconds.</string>
    <string name="auth_failed_dialog_title">Authentication Failed</string>
    <string name="auth_failed_dialog_message">Incorrect username or password entered. Please try again.</string>
    <string name="no_internet_conn_dialog_title">No internet connection</string>
    <string name="no_internet_conn_dialog_message">You have no internet connection.\nPlease check phone or Wi-Fi connection and signal strength and try again.</string>
    <string name="no_internet_exit">Exit</string>
    <string name="no_internet_open_settings">Open Settings</string>
    <string name="similar_patients_dialog_title">Similar patients found</string>
    <string name="socket_exception_dialog_title">Connection Failed</string>
    <string name="socket_exception_dialog_message">A connection error has occurred .\nPlease try again in a few seconds.</string>
    <string name="invalid_url_dialog_title">Cannot find server</string>
    <string name="invalid_url_dialog_message">Cannot find server. Please check the URL and try again.</string>
    <string name="server_unavailable_dialog_title">Server Unavailable</string>
    <string name="server_unavailable_dialog_message">Cannot connect with server.\nPlease check the URL or internet connection and try again.</string>
    <string name="server_error_dialog_title">Server Error</string>
    <string name="server_error_dialog_message">Server error occurred.\nPlease check the URL or internet connection and try again.</string>
    <string name="logout_dialog_title">Logging out</string>
    <string name="logout_dialog_message">Are you sure you want to logout from OpenMRS client?</string>
    <string name="logout_dialog_button">Logout</string>
    <string name="credentials_changed_dialog_title">Credentials changed</string>
    <string name="credentials_changed_dialog_message">Your credentials have been changed in the web app. You are logged out automatically.</string>
    <string name="unauthorized_dialog_title">Unauthorized</string>
    <string name="unauthorized_dialog_message">Session expired. Please log in again.</string>
    <string name="server_not_supported_dialog_title">Server Not Supported</string>
    <string name="server_not_supported_dialog_message">Server could not be supported. Change the URL.</string>
    <string name="end_visit_dialog_title">End Visit</string>
    <string name="end_visit_dialog_message">Are you sure you want to end this visit?</string>
    <string name="start_visit_dialog_title">Start Visit</string>
    <string name="start_visit_dialog_message">Are you sure you want to start visit for %1$s now?</string>
    <string name="start_visit_unsuccessful_dialog_title">Visit didn\'t start.</string>
    <string name="start_visit_unsuccessful_dialog_message">There are already active visits of %1$s. Try synchronizing patient or closing previous visits</string>
    <string name="progress_dialog_message">Please wait</string>
    <string name="no_visit_dialog_title">Start new visit</string>
    <string name="no_visit_dialog_message">This user has no active visit. Would you like to start one now?</string>
    <string name="no_visit_dialog_button_accept">Yes</string>
    <string name="no_visit_dialog_button_cancel">Cancel</string>
    <string name="delete_patient_dialog_message">Are you sure you want to delete this patient?</string>
    <string name="location_dialog_title">Select Location</string>
    <string name="location_dialog_current_location">Current Location: </string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_confirm">Confirm</string>
    <string name="dialog_button_register_new">Register new</string>
    <string name="dialog_button_merge">Merge</string>
    <string name="action_next">Next</string>
    <string name="action_previous">Previous</string>
    <string name="action_register">Register Patient</string>
    <string name="dialog_button_select_location">Select Location</string>
    <string name="settings_logs">Logs</string>
    <string name="settings_about">About</string>
    <string name="settings_application_info">Application Info</string>
    <string name="settings_concepts_info">Concepts Info</string>
    <string name="settings_concepts_in_db">Concepts in DB:</string>
    <string name="settings_no_concepts_toast">There are no concepts in DB!</string>
    <string name="action_find_patients">Find Patients</string>
    <string name="action_find_commodities">Find Commodities</string>
    <string name="action_synced_patients">Patients</string>
    <string name="action_download_patients">Download Patients</string>
    <string name="art_program_icon_label">Treatment Services</string>
    <string name="hts_program_icon_label">Testing Services</string>
    <string name="pmtct_program_label">PMTCT</string>
    <string name="hei_program_label">HIV Exposed Infant</string>
    <string name="capture">Capture</string>
    <string name="SaveFingerPrint">Save</string>
    <string name="DeleteFingerPrint">Clear Prints</string>
    <string name="fingerprint_capture_image">Fingerprint capture image</string>
</resources>