<?xml version="1.0" encoding="utf-8"?><!--
  ~ The contents of this file are subject to the OpenMRS Public License
  ~ Version 1.0 (the "License"); you may not use this file except in
  ~ compliance with the License. You may obtain a copy of the License at
  ~ http://license.openmrs.org
  ~
  ~ Software distributed under the License is distributed on an "AS IS"
  ~ basis, WITHOUT WARRANTY OF ANY KIND, either express or implied. See the
  ~ License for the specific language governing rights and limitations
  ~ under the License.
  ~
  ~ Copyright (C) OpenMRS, LLC.  All Rights Reserved.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <TableRow>
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/margin_short"
                android:layout_weight="1">

                <RelativeLayout
                    android:id="@+id/htsView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true">

                    <ImageView
                        android:id="@+id/htsButton"
                        android:layout_width="@dimen/dashboard_icon_height_width"
                        android:layout_height="@dimen/dashboard_icon_height_width"
                        android:layout_alignParentTop="true"
                        android:layout_centerInParent="true"
                        android:layout_margin="@dimen/dashboard_icon_margin"
                        android:contentDescription="@string/hts_program_icon_label" />

                    <TextView
                        android:id="@+id/activeVisitsLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/htsButton"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/dashboard_text_top_margin"
                        android:layout_marginBottom="@dimen/dashboard_text_bottom_margin"
                        android:text="@string/hts_program_icon_label"
                        android:textSize="@dimen/dashboard_text_size" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/margin_short"
                android:layout_weight="1">

                <RelativeLayout
                    android:id="@+id/artView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true">

                    <ImageView
                        android:id="@+id/artButton"
                        android:layout_width="@dimen/dashboard_icon_height_width"
                        android:layout_height="@dimen/dashboard_icon_height_width"
                        android:layout_alignParentTop="true"
                        android:layout_centerInParent="true"
                        android:layout_margin="@dimen/dashboard_icon_margin"
                        android:contentDescription="@string/art_program_icon_label"/>

                    <TextView
                        android:id="@+id/artLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/artButton"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/dashboard_text_top_margin"
                        android:layout_marginBottom="@dimen/dashboard_text_bottom_margin"
                        android:text="@string/art_program_icon_label"
                        android:textSize="@dimen/dashboard_text_size" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>
        </TableRow>

        <TableRow>
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/margin_short"
                android:layout_weight="1">

                <RelativeLayout
                    android:id="@+id/pmtctView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true">

                    <ImageView
                        android:id="@+id/pmtctButton"
                        android:layout_width="@dimen/dashboard_icon_height_width"
                        android:layout_height="@dimen/dashboard_icon_height_width"
                        android:layout_alignParentTop="true"
                        android:layout_centerInParent="true"
                        android:layout_margin="@dimen/dashboard_icon_margin"
                        android:contentDescription="@string/pmtct_program_label" />

                    <TextView
                        android:id="@+id/registryLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/pmtctButton"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/dashboard_text_top_margin"
                        android:layout_marginBottom="@dimen/dashboard_text_bottom_margin"
                        android:text="@string/pmtct_program_label"
                        android:textSize="@dimen/dashboard_text_size" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/margin_short"
                android:layout_weight="1">

                <RelativeLayout
                    android:id="@+id/heiView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true">

                    <ImageView
                        android:id="@+id/heiButton"
                        android:layout_width="@dimen/dashboard_icon_height_width"
                        android:layout_height="@dimen/dashboard_icon_height_width"
                        android:layout_alignParentTop="true"
                        android:layout_centerInParent="true"
                        android:layout_margin="@dimen/dashboard_icon_margin"
                        android:contentDescription="@string/hei_program_label" />

                    <TextView
                        android:id="@+id/FormsLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/heiButton"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/dashboard_text_top_margin"
                        android:layout_marginBottom="@dimen/dashboard_text_bottom_margin"
                        android:text="@string/hei_program_label"
                        android:textSize="@dimen/dashboard_text_size" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>


        </TableRow>

    </TableLayout>

</ScrollView>